resolved chart mis-alignment to the side

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -16,8 +16,8 @@
   padding: 4rem 0;
   margin: 0 auto;
   max-width: 1400px;
-  width: 95%;
-  /* flex: 1; */
+  width: 100%;
+  flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -107,7 +107,7 @@
 
 .pie {
   width: 100%;
-  margin: 1rem;
+  margin: 1rem 0;
   padding: 1.5rem;
   text-align: center;
   color: inherit;
@@ -122,7 +122,7 @@
 }
 
 .bar {
-  margin: 1rem;
+  margin: 1rem 0;
   padding: 1.5rem;
   text-align: center;
   color: inherit;
@@ -170,11 +170,11 @@
 
 
 @media handheld,
-(max-width: 1200px) {
+(max-width: 800px) {
 
-  /* .container {
+  .container {
     width: 1000px;
-  } */
+  }
 
   .piechart {
     height: 500px;
